[bugfix] Stop backup prolog stderr spam and fix restore progress count
FileSystemBackupDescriptor parsed every backup payload file as XML while
counting resources, printing "[Fatal Error] :1:1: Content is not allowed
in prolog." to stderr for binary entries (e.g. test.binary). Count
resources only from __contents__.xml descriptors (matching the zip-backup
path) via DescriptorResourceCounter, whose SAX parse errors are routed
through a silent DefaultHandler on the pooled reader factory instead of a
null error handler.

Each descriptor counts its own subtree recursively, consistent with
ZipArchiveBackupDescriptor. Restore now sums getNumberOfFiles() over the
root descriptors only, via a BackupPlan record that separates the restore
queue (with /db/system pre-queued for correct ordering) from the roots
used for the progress total. This counts every subtree exactly once: it
avoids double-counting the pre-queued system/security/groups hierarchy
while still including arbitrary collections such as /db/apps that are not
pre-queued, so the restore progress indicator reaches 100%.

Add FileSystemBackupDescriptorTest (per-descriptor and recursive grand
total, including non-system subcollections) and update XMLReaderPoolTest
for the pooled silent SAX error handler.

Co-authored-by: Cursor <cursoragent@cursor.com>
Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>